fix* overflowing content on the home page

--- a/src/News2.css
+++ b/src/News2.css
@@ -106,7 +106,7 @@
 .genre-image{
   background-color: lightblue;
   width:100%;
-  height:650px;
+  /* height:650px; */
   background-attachment: fixed;
 }
 
