--- a/src/component/Volume.module.css
+++ b/src/component/Volume.module.css
@@ -7,7 +7,7 @@
 
 .slider {
   -webkit-appearance: none;
-  width: 70%;
+  /* width: 70%; */
   height: 3px;
   border-radius: 5px;
   background: var(--volumeSlider);
